dfir_rs/tests/compile-fail-stable/surface_demuxenum_wrongtype.stderr
error[E0277]: the trait bound `impl dfir_rs::futures::Sink<Shape, Error = Infallible>: dfir_rs::futures::Sink<{integer}>` is not satisfied
  --> tests/compile-fail-stable/surface_demuxenum_wrongtype.rs:13:41
   |
13 |         my_demux = source_iter(0..5) -> demux_enum::<Shape>();
   |                                         ^^^^^^^^^^ the trait `dfir_rs::futures::Sink<{integer}>` is not implemented for `impl dfir_rs::futures::Sink<Shape, Error = Infallible>`
   |
   = help: the following other types implement trait `dfir_rs::futures::Sink<Item>`:
             `&dfir_rs::futures::futures_channel::mpsc::UnboundedSender<T>` implements `dfir_rs::futures::Sink<T>`
             `&mut S` implements `dfir_rs::futures::Sink<Item>`
             `Box<S>` implements `dfir_rs::futures::Sink<Item>`
             `BufferUnordered<S>` implements `dfir_rs::futures::Sink<Item>`
             `Buffered<S>` implements `dfir_rs::futures::Sink<Item>`
             `Fanout<Si1, Si2>` implements `dfir_rs::futures::Sink<Item>`
             `FlatMapUnordered<St, U, F>` implements `dfir_rs::futures::Sink<_Item>`
             `FlattenSink<Fut, Si>` implements `dfir_rs::futures::Sink<_Item>`
           and $N others
note: required by a bound in `pivot_run_sg_1v1`
  --> tests/compile-fail-stable/surface_demuxenum_wrongtype.rs:12:18
   |
12 |       let mut df = dfir_syntax! {
   |  __________________^
13 | |         my_demux = source_iter(0..5) -> demux_enum::<Shape>();
14 | |         my_demux[Rectangle] -> for_each(std::mem::drop);
15 | |         my_demux[Circle] -> for_each(std::mem::drop);
16 | |         my_demux[Square] -> for_each(std::mem::drop);
17 | |     };
   | |_____^ required by this bound in `pivot_run_sg_1v1`
   = note: this error originates in the macro `dfir_syntax` (in Nightly builds, run with -Z macro-backtrace for more info)
